je chanfe de pieds de page

--- a/Semaine_3/exercice 3.html
+++ b/Semaine_3/exercice 3.html
@@ -26,5 +26,15 @@
         <li class="harvest-date">Mangue</li>
     </ul>
 
-</body>
+  <footer>
+        <p>&copy; 2025 Lifero_D-clic DevWeb</p>
+        <p>Jeune panssionné de développement web</p>
+        <p>Numéro de téléphone: +229 0197653335 / 0194592567</p>
+        <p>Contact: <a href="mailto: conctat@gmail.com">romaianakpo86@gmail.com</a></p>
+        <p>Facebook: <a href="https://www.facebook.com/Romain.AKPO">Romain Akpo</a> </p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/romain-akpo-2ab8802a8/">Romain Akpo</a></p>
+        <p>Adresse: Cotonou, Bénin</p>
+  </footer>
+
+</body> 
 </html>
