--- a/Semaine_3/exercice2.html
+++ b/Semaine_3/exercice2.html
@@ -24,7 +24,7 @@
     </section>
 
     <!-- Paragraphe en dehors de la section -->
-    <p>Bonjour cher tuteur,<br> Je voudrais vous dire un merci pour le travaille acharné de chaque semaine.
+    <p>Bonjour cher tuteur,<br> Je voudrais vous dire un sincère merci pour le travaille acharné de chaque semaine.
 	<br>Soyez Béni !</p>
 
 </body>
