--- a/Semaine_2/Exercice1/synthèse.html
+++ b/Semaine_2/Exercice1/synthèse.html
@@ -4,45 +4,8 @@
  <meta charset="UTF-8">
         <title>Portfolio de Lifero</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+	<link rel="stylesheet" href="styles.css">
 </head>	
-<style>
-header {
-  background-color: #2c3e50;
-  color: white;
-  padding: 20px;
-  text-align: center;
-}
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f5f5f5;
-  color: #2c3e50;
-}
-h1 {
-  background-color: #2c3e50;
-  color: hwb(0 100% 0%);
-  padding: 20px;
-  text-align: center;
-}
-section {
-  padding: 20px;
-  margin: 15px;
-  background-color: rgb(217, 248, 188);
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-}
-
-footer {
-  text-align: center;
-  padding: 15px;
-  background-color: #c7ecc667;
-  color: #2c3e50;
-}
-	</style>
-
 	<body>	
 	 <h1>Bienvenue sur le Portfolio de Lifero</h1>
 		<section id="mon profil"></section>	
@@ -67,8 +30,8 @@ footer {
 					et une patience sans faille. Fort de mes expériences en équipe, 
 					je reste perméable.</p>
 			<h2>Image avec lien hypertexte</h2>
-				<a href="images.html">
-					<img src="image-ro.png" alt="Une belle image" width="300">
+				<a href="./img/image-ro.png">
+					<img src="./img/image-ro.png" alt="Une belle image" width="300">
 				</a>
 				
 			<p>Le lien vers le site de eservice Bénin:</p>
@@ -111,6 +74,7 @@ footer {
 
 	<footer>
 			<p>&copy; 2025 Lifero Jésuwè</p>
+			<p>Jeune passionné du développement web</p>
 			<p> Je puis tout par celui me fortifie !</p> 
 	</footer>
 	</body> 
