--- a/Semaine_4/index.html
+++ b/Semaine_4/index.html
@@ -3,20 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Exercices semainaine 4 JS...</title>
-  <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        color: #333;
-        padding: 20px;
-    }
-    h1 {
-        color: #2c3e50;
-    }
-    </style>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <body>
-      <h1>Bienvenu sur ma page de vérification et choix d'un mois avec l'essaie de JavaScript</h1>
-    <script src="JavaScript.js"></script>
+    
+      <h1>Bienvenu sur ma page de vérification de croissance (adulte ou mineur) et choix d'un mois avec l'essai de JavaScript</h1>
+        <h2>Exercices 1 JavaScript_semaine 4</h2>
+        <p id="script">Choisissez un programme pour la vérification :</p>
+        <button onclick="verifierAge()">1. Âge</button>
+        <button onclick="pairOuImpair()">2. Nombre</button>
+        <button onclick="afficherMois()">3. Mois</button>
+    <script  src="JavaScript.js"></script>
   </body>
 </html>
