--- a/Semaine_4/index.html
+++ b/Semaine_4/index.html
@@ -2,17 +2,19 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Exercices semainaine 4 JS...</title>
+  <title>Exercices semaine 4 JS...</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <body>
     
-      <h1>Bienvenu sur ma page de vérification de croissance (adulte ou mineur) et choix d'un mois avec l'essai de JavaScript</h1>
+      <h1>Bienvenu sur ma page du contrôle de connaissance  en JavaScript</h1>
 
         <h2>Exercices 1 JavaScript_semaine 4</h2>
 
-        <p id="script">Choisissez un programme pour la vérification :</p>
+        <p id="script">Choisissez un programme pour connaitre votre niveau de croissance (adulte ou mineur), vérification d'un nombre impair ou pair et choix d'un mois :</p>
+
+        <p id="scripts">Les résultats s'affichent automatiquement en haut de la page une fois cliqué</p>
 
         <button onclick="verifierAge()">1. Âge</button>
         <button onclick="pairOuImpair()">2. Nombre</button>
