--- a/Semaine_6/index.html
+++ b/Semaine_6/index.html
@@ -11,6 +11,7 @@
     <header>
         <div class="container">
             <h1 style="color: rgb(252, 252, 252);">AKPO <strong style="color: rgb(140, 209, 248);">Romain</strong></h1>
+            <button class="menu-toggle" aria-label="Menu">☰</button>
             <nav>
                 <div class="nav-links">
                     <ul>
@@ -45,7 +46,7 @@
                             Je suis actuellement étudiant en <strong style="color: rgb(140, 209, 248);">développement web</strong>, <br>et je cherche à améliorer mes compétences en JavaScript, HTML et CSS.<br><br>
                             J'adore transformer mes idées en projets concrets <br>et expérimenter avec les nouvelles technologies.
                         </p>
-                        <a href="../Semaine_6/files/CV_Romain_AKPO.pdf" target="_blank" rel="noopener noreferrer" class="btn">Télécharger mon CV</a>
+                        <a href="./files/CV_Romain_AKPO.pdf" target="_blank" rel="noopener noreferrer" class="btn">Télécharger mon CV</a>
                     </div>
                         <div class="about-img">
                         <img class="profile-circle" src="./assets/images/IMG_20250728_130651.jpg" alt="mon image de cv">
