--- a/Semaine_6/index.html
+++ b/Semaine_6/index.html
@@ -11,8 +11,7 @@
     <header>
         <div class="container">
             <h1 style="color: rgb(252, 252, 252);">AKPO <strong style="color: rgb(140, 209, 248);">Romain</strong></h1>
-            <nav>
-                <div class="nav-links">
+            <nav class="nav-links">
                     <ul>
                         <li><a href="#accueil">Accueil</a></li>
                         <li><a href="#about">À propos</a></li>
@@ -22,7 +21,6 @@
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="../lifero/index.html">Rapport formation</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </header>
