actualisation de données

--- a/lifero/index.html
+++ b/lifero/index.html
@@ -69,116 +69,112 @@
                     </p>
                 </div>
                 <div class="accueil-image">
-                    <img src="assets/imag/OIF_LOGO-BLOC MARQUE OIF_CMJN copie.jpg" alt="OIF_LOGO-BLOC MARQUE OIF_CMJN" style="height: 300px; border-radius: 18px; box-shadow: 0 4px 16px rgba(0,0,0,0.12);">
+                    <img src="assets/imag/OIF_LOGO-BLOC MARQUE OIF_CMJN copie.jpg" alt="OIF_LOGO-BLOC MARQUE OIF_CMJN" style="height: 300px; border-radius: 2px; box-shadow: 0 4px 16px rgba(0,0,0,0.12);">
                 </div>
             </div>
         </section>
         <section id="Semaine_1">
-            <h3>Semaine 1</h3>
+            <h3>Semaine 1 : Introduction au web</h3>
             <p class="parag-justifie">
                 Cette première semaine sur <strong>D-CLIC</strong> a permis de découvrir les fondamentaux du numérique et de la programmation. Nous avons commencé par la réalisation d’une carte mentale pour organiser nos idées et visualiser les concepts clés du développement web.<br>
                 <br>
                 Les points abordés :
                 <ul>
-                    <li>Présentation de la plateforme D-CLIC et de ses parcours</li>
+                    <li>Présentation de la plateforme D-CLIC et de ses parcours ;</li>
                     <li>Introduction aux métiers du numérique et aux compétences de base</li>
-                    <li>Utilisation d’outils collaboratifs et de ressources éducatives libres</li>
-                    <li>Création d’une carte mentale pour structurer les connaissances acquises</li>
-                    <li>Premiers exercices pratiques pour manipuler des outils numériques</li>
+                    <li>Utilisation d’outils collaboratifs et de ressources éducatives libres ;</li>
+                    <li>Création d’une carte mentale pour structurer les connaissances acquises ;</li>
+                    <li>Premiers exercices pratiques pour manipuler des outils numériques.</li>
                 </ul>
                 <br>
-                Cette étape a été essentielle pour poser les bases et faciliter la compréhension des modules suivants. Pour voir la carte mentale réalisée :<br>
-                <a class="btn-lien" href="Semaine_1/carte_mantale_romain_akpo.pdf" target="_blank">Voir la carte mentale</a>
+                Cette étape a été essentielle pour poser les bases et faciliter la compréhension des modules suivants. Pour voir la carte mentale réalisée :<a class="btn-lien" href="../Semaine_1/carte_mantale_romain_akpo.pdf" target="_blank">cliquez ici</a>
             </p>
         </section>
         <section id="Semaine_2">
-            <h3>Semaine 2</h3>
+            <h3>Semaine 2 : Introduction HTML 5</h3>
             <p class="parag-justifie">
                 Cette semaine sur la plateforme <strong>D-CLIC</strong> a été dédiée à l’apprentissage des bases du développement web. Nous avons suivi des modules interactifs sur <strong>HTML</strong> pour structurer les pages, <strong>CSS</strong> pour la mise en forme, et <strong>JavaScript</strong> pour rendre les pages dynamiques.<br>
                 <br>
                 Les activités proposées incluaient :<br>
                 <ul>
-                    <li>Création de pages web simples et structurées</li>
-                    <li>Utilisation des balises sémantiques et des formulaires</li>
-                    <li>Personnalisation du style avec des feuilles CSS</li>
-                    <li>Ajout d’interactivité avec des scripts JavaScript (ex : boutons, alertes, calculs)</li>
-                    <li>Découverte des bonnes pratiques pour l’accessibilité et la compatibilité mobile</li>
+                    <li>Création de pages web simples et structurées ;</li>
+                    <li>Utilisation des balises sémantiques et des formulaires ;</li>
+                    <li>Personnalisation du style avec des feuilles CSS ;</li>
+                    <li>Ajout d’interactivité avec des scripts JavaScript (ex : boutons, alertes, calculs) ;</li>
+                    <li>Découverte des bonnes pratiques pour l’accessibilité et la compatibilité mobile.</li>
                 </ul>
                 <br>
-                Grâce à ces exercices, j’ai pu réaliser des mini-projets et mieux comprendre le fonctionnement d’un site web moderne. Pour voir un exemple de synthèse réalisée cette semaine :<br>
-                <a href="Semaine_2/Exercice1/synthèse.html" target="_blank" class="btn-lien">Voir la synthèse</a>
+                Grâce à ces exercices, j’ai pu réaliser des mini-projets et mieux comprendre le fonctionnement d’un site web moderne. Pour voir un exemple de synthèse réalisée cette semaine :<a href="../Semaine_2/Exercice1/synthèse.html" target="_blank" class="btn-lien">cliquez ici</a>
             </p>
         </section>
         <section id="Semaine_3">
-            <h3>Semaine 3</h3>
+            <h3>Semaine 3 : Introduction aux feuilles de style CSS</h3>
             <p class="parag-justifie">
-                Durant cette troisième semaine sur <strong>D-CLIC</strong>, nous avons approfondi nos connaissances en JavaScript et exploré des concepts avancés tels que la manipulation du DOM, les événements, et les fonctions.<br>
+                Durant cette troisième semaine sur <strong>D-CLIC</strong>, nous avons approfondi nos connaissances en feuille de styles CSS et exploré des concepts avancés.<br>
                 <br>
                 Les points clés abordés :
                 <ul>
-                    <li>Manipulation du DOM pour modifier dynamiquement le contenu des pages</li>
-                    <li>Gestion des événements utilisateur (clics, soumissions de formulaires)</li>
-                    <li>Création et utilisation de fonctions pour structurer le code</li>
-                    <li>Introduction aux tableaux et aux objets pour gérer des collections de données</li>
-                    <li>Réalisation d’exercices pratiques pour consolider les acquis</li>
+                    <li>Comprendre le concept de mise en forme en utilisant les feuilles de style ;</li>
+                    <li>Maîtriser la mise en forme en utilisant CSS pour créer des pages web visuellement attrayantes et esthétiques ;</li>
+                    <li>Reconnaître et mettre en œuvre les divers types de sélecteurs CSS, tels que les sélecteurs de classe, les sélecteurs d'ID et les sélecteurs d'éléments, afin de cibler spécifiquement les éléments à styliser ;</li>
+                    <li>Introduction aux tableaux et aux objets pour gérer des collections de données ;</li>
+                    <li>Appliquer les sélecteurs CSS aux différentes balises HTML.</li>
                 </ul>
                 <br>
-                Ces compétences m’ont permis de créer des pages web plus interactives et fonctionnelles. Pour voir un exemple d’exercice réalisé cette semaine :<br>
-                <a href="Semaine_3/exercice1.html" target="_blank" class="btn-lien">Voir l'exercice</a>
+                Ces compétences m’ont permis de créer des pages web plus interactives et fonctionnelles. Pour voir un exemple d’exercice réalisé cette semaine : <a href="../Semaine_3/exercice 3.html" target="_blank" class="btn-lien">cliquez ici</a>
             </p>
         </section>
         <section id="Semaine_4">
-            <h3>Semaine 4</h3>
+            <h3>Semaine 4 : Introduction aux JavaScript</h3>
             <p class="parag-justifie">
-                Au cours de cette quatrième semaine sur <strong>D-CLIC</strong>, nous avons exploré les bases de données et leur intégration avec les applications web. Nous avons appris à utiliser des systèmes de gestion de bases de données (SGBD) et à interagir avec des données dynamiques.<br>
+                Au cours de cette quatrième semaine sur <strong>D-CLIC</strong>, nous avons exploré les bases en JavaScript et son intégration dans une page web. Nous avons appris à utiliser des Opérations avec JavaScript pour effectuer des calculs mathématiques et des opérations sur les chaînes de caractères.<br>
                 <br>
                 Les points clés abordés :
                 <ul>
-                    <li>Introduction aux bases de données et aux SGBD</li>
-                    <li>Modélisation des données et création de schémas</li>
-                    <li>Langage SQL pour interroger et manipuler les données</li>
-                    <li>Intégration des bases de données avec des applications web (ex : formulaires, affichage dynamique)</li>
-                    <li>Réalisation d’exercices pratiques pour consolider les acquis</li>
+                    <li>Intégration d'un script Javascript dans une page HTML ;</li>
+                    <li>Création des variables et comprendre leur portée dans JavaScript ;</li>
+                    <li>Utiliser des opérateurs JavaScript pour effectuer des calculs mathématiques et des opérations sur les chaînes de caractères ;</li>
+                    <li>Créaction des structures conditionnelles, des boucles et manipuler des tableaux ;</li>
+                    <li>Utilisation des fonctions JavaScript pour organiser votre code de manière modulaire et réutilisable.</li>
                 </ul>
                 <br>
-                Ces compétences m’ont permis de créer des applications web plus robustes et de gérer efficacement les données. Pour voir un exemple d’exercice réalisé cette semaine :<br>
-                <a href="Semaine_4/exercice1.html" target="_blank" class="btn-lien">Voir l'exercice</a>
+                Ces compétences m’ont permis de créer des page web plus robustes. Pour voir un exemple d’exercice réalisé cette semaine : <a href="../Semaine_4/index.html" target="_blank" class="btn-lien">cliquez ici</a>
             </p>
         </section>
         <section id="Semaine_5">
-            <h3>Semaine 5</h3>
+            <h3>Semaine 5 : les objets Javascript</h3>
             <p class="parag-justifie">
-                Au cours de cette cinquième semaine sur <strong>D-CLIC</strong>, nous avons abordé le développement d'applications web en utilisant des frameworks modernes. Nous avons découvert comment ces outils peuvent simplifier le processus de création d'applications complexes.<br>
+                Au cours de cette cinquième semaine sur <strong>D-CLIC</strong>, nous avons abordé les objets Javascript en utilisant des éléments adéquats. Nous avons découvert comment ces objets peuvent simplifier le processus d'effectuer des opérations complexes.<br>
                 <br>
                 Les points clés abordés :
                 <ul>
-                    <li>Introduction aux frameworks JavaScript (ex : React, Vue.js)</li>
-                    <li>Création de composants réutilisables</li>
-                    <li>Gestion de l'état de l'application</li>
-                    <li>Routage et navigation dans les applications monopage</li>
+                    <li>Comment intégrer des formulaires dans des pages HTML en utilisant des éléments adéquats ;</li>
+                    <li>Comment ajouter des éléments de formulaire tels que des champs d'entrée, des boutons de soumission, etc. en fonction des types de données à saisi ;</li>
+                    <li>Gestion des objets standards de JavaScript tels que Math, String, Date, et Array, etc ;</li>
+                    <li>Comment accéder aux propriétés et aux méthodes de ces objets ;</li>
+                    <li>Comment utiliser ces objets pour effectuer des opérations courantes telles que le calcul mathématique, la manipulation de chaînes de caractères, la gestion des dates, et la manipulation de tableaux. ;</li>
                     <li>Réalisation d’exercices pratiques pour consolider les acquis</li>
                 </ul>
                 <br>
-                Ces compétences m’ont permis de créer des applications web plus dynamiques et réactives. Pour voir un exemple d’exercice réalisé cette semaine :<br>
-                <a href="Semaine_5/exercice1.html" target="_blank" class="btn-lien">Voir l'exercice</a>
+                Ces compétences m’ont permis de créer des pages web plus dynamiques et réactives. Pour voir un exemple d’exercice parmi tant d'autres réalisé cette semaine : <a href="../Semaine_5/exercise4.html" target="_blank" class="btn-lien">cliquez ici</a>
             </p>
         </section>
         <section id="Semaine_6">
             <h3>Semaine 6</h3>
             <p class="parag-justifie">
-                Lors de cette sixième semaine sur <strong>D-CLIC</strong>, nous avons exploré les bonnes pratiques de développement et les outils de collaboration. Nous avons appris à utiliser des systèmes de contrôle de version et à travailler en équipe sur des projets communs.<br>
+                Lors de cette sixième semaine sur <strong>D-CLIC</strong>, nous avons exploré les bonnes pratiques de développement et les outils de collaboration. Nous avons appris à utiliser des systèmes de contrôle de version et à travailler en équipe sur des projets personnel<br>
                 <br>
                 Les points clés abordés :
                 <ul>
-                    <li>Introduction aux systèmes de contrôle de version (ex : Git)</li>
-                    <li>Utilisation de plateformes collaboratives (ex : GitHub, GitLab)</li>
-                    <li>Gestion des branches et résolution des conflits</li>
-                    <li>Revue de code et bonnes pratiques de développement</li>
-                    <li>Réalisation d’exercices pratiques pour consolider les acquis</li>
+                    <li>Introduction aux systèmes de contrôle de version (ex : Git) ;</li>
+                    <li>Utilisation de plateformes collaboratives (ex : GitHub, GitLab) ;</li>
+                    <li>Gestion des branches et résolution des conflits ;</li>
+                    <li>Revue de code et bonnes pratiques de développement ;</li>
+                    <li>Réalisation d’exercices pratiques pour consolider les acquis ;</li>
+                    <li>Réalisation du projet final.</li>
                 </ul>
                 <br>
-                Ces compétences m’ont permis de mieux collaborer avec d’autres développeurs et d’améliorer la qualité de mon code. Pour voir un exemple d’exercice réalisé cette semaine :<br>
-                <a href="Semaine_6/exercice1.html" target="_blank" class="btn-lien">Voir l'exercice</a>
+                Ces compétences m’ont permis de mieux collaborer avec d’autres développeurs et d’améliorer la qualité de mon code. Pour voir mon projet final réalisé cette semaine : <a href="../Semaine_6/index.html" target="_blank" class="btn-lien">cliquez ici</a>
             </p>
         </section>
         <section id="objectif">
@@ -206,9 +202,8 @@
             </p>
             <ul>
                 <li>Conception et structuration de sites web avec HTML, CSS et JavaScript</li>
-                <li>Maîtrise des frameworks front-end modernes (React, Vue.js)</li>
-                <li>Développement d'applications back-end (Node.js, Express)</li>
-                <li>Gestion et modélisation de bases de données (MongoDB, MySQL, SQL)</li>
+                <li>Développement des pages web dynamiques</li>
+                <li>Gestion et modélisation de bases de données (MySQL, SQL)</li>
                 <li>Création et administration de bases de données sur des plateformes de collecte : KoboToolbox, Suivey, ODK, etc.</li>
                 <li>Utilisation d'outils de versioning et de collaboration (Git, GitHub, GitLab)</li>
                 <li>Principes de design UX/UI et accessibilité web</li>
@@ -274,17 +269,4 @@
 </section>
 </footer>
 </body>
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var form = document.getElementById('form-prestation');
-        var confirmation = document.getElementById('confirmation-message');
-        if(form) {
-            form.addEventListener('submit', function(e) {
-                e.preventDefault();
-                form.style.display = 'none';
-                confirmation.style.display = 'block';
-            });
-        }
-    });
-    </script>
 </html>
